# markdown-attachment-renamer

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
markdown_attachment_renamer/: __main__.py  renamer.py
