[metadata]
name = markdown-attachment-renamer
version = "0.1.0"
description = "Rename markdown attachments"
long_description = file: README.md
keywords =
    markdown
    renamer
    automation
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*